tests/spec/lex/snapshots/imaginary_zero.snap
---
source: tests/spec/lex/mod.rs
description: 0i
---
LexResult {
    tokens: [
        Token {
            kind: Imaginary,
            text: "0i",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 2,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
