tests/spec/lex/snapshots/impl_block.snap
---
source: tests/spec/lex/mod.rs
description: |
  
  impl Counter {
    fn new() -> Counter {
      return Counter { value: 0 };
    }
  }
---
LexResult {
    tokens: [
        Token {
            kind: Impl,
            text: "impl",
            byte_offset: 1,
            byte_length: 4,
        },
        Token {
            kind: Identifier,
            text: "Counter",
            byte_offset: 6,
            byte_length: 7,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 14,
            byte_length: 1,
        },
        Token {
            kind: Function,
            text: "fn",
            byte_offset: 18,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "new",
            byte_offset: 21,
            byte_length: 3,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 24,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 25,
            byte_length: 1,
        },
        Token {
            kind: Arrow,
            text: "->",
            byte_offset: 27,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "Counter",
            byte_offset: 30,
            byte_length: 7,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 38,
            byte_length: 1,
        },
        Token {
            kind: Return,
            text: "return",
            byte_offset: 44,
            byte_length: 6,
        },
        Token {
            kind: Identifier,
            text: "Counter",
            byte_offset: 51,
            byte_length: 7,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 59,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "value",
            byte_offset: 61,
            byte_length: 5,
        },
        Token {
            kind: Colon,
            text: ":",
            byte_offset: 66,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "0",
            byte_offset: 68,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 70,
            byte_length: 1,
        },
        Token {
            kind: Semicolon,
            text: ";",
            byte_offset: 71,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 75,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 77,
            byte_length: 1,
        },
        Token {
            kind: Semicolon,
            text: "",
            byte_offset: 78,
            byte_length: 0,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 79,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
