tests/spec/lex/snapshots/impl_keyword.snap
---
source: tests/spec/lex/mod.rs
description: impl
---
LexResult {
    tokens: [
        Token {
            kind: Impl,
            text: "impl",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
