tests/spec/lex/snapshots/impl_with_generics.snap
---
source: tests/spec/lex/mod.rs
description: |
  
  impl<T> Container<T> {
    fn get(self: Container<T>) -> T {
      return self.value;
    }
  }
---
LexResult {
    tokens: [
        Token {
            kind: Impl,
            text: "impl",
            byte_offset: 1,
            byte_length: 4,
        },
        Token {
            kind: LeftAngleBracket,
            text: "<",
            byte_offset: 5,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "T",
            byte_offset: 6,
            byte_length: 1,
        },
        Token {
            kind: RightAngleBracket,
            text: ">",
            byte_offset: 7,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "Container",
            byte_offset: 9,
            byte_length: 9,
        },
        Token {
            kind: LeftAngleBracket,
            text: "<",
            byte_offset: 18,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "T",
            byte_offset: 19,
            byte_length: 1,
        },
        Token {
            kind: RightAngleBracket,
            text: ">",
            byte_offset: 20,
            byte_length: 1,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 22,
            byte_length: 1,
        },
        Token {
            kind: Function,
            text: "fn",
            byte_offset: 26,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "get",
            byte_offset: 29,
            byte_length: 3,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 32,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "self",
            byte_offset: 33,
            byte_length: 4,
        },
        Token {
            kind: Colon,
            text: ":",
            byte_offset: 37,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "Container",
            byte_offset: 39,
            byte_length: 9,
        },
        Token {
            kind: LeftAngleBracket,
            text: "<",
            byte_offset: 48,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "T",
            byte_offset: 49,
            byte_length: 1,
        },
        Token {
            kind: RightAngleBracket,
            text: ">",
            byte_offset: 50,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 51,
            byte_length: 1,
        },
        Token {
            kind: Arrow,
            text: "->",
            byte_offset: 53,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "T",
            byte_offset: 56,
            byte_length: 1,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 58,
            byte_length: 1,
        },
        Token {
            kind: Return,
            text: "return",
            byte_offset: 64,
            byte_length: 6,
        },
        Token {
            kind: Identifier,
            text: "self",
            byte_offset: 71,
            byte_length: 4,
        },
        Token {
            kind: Dot,
            text: ".",
            byte_offset: 75,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "value",
            byte_offset: 76,
            byte_length: 5,
        },
        Token {
            kind: Semicolon,
            text: ";",
            byte_offset: 81,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 85,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 87,
            byte_length: 1,
        },
        Token {
            kind: Semicolon,
            text: "",
            byte_offset: 88,
            byte_length: 0,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 89,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
