tests/spec/lex/snapshots/inner_attribute_is_not_a_shebang.snap
---
source: tests/spec/lex/mod.rs
description: |-
  #![foo]
  fn main() {}
---
LexResult {
    tokens: [
        Token {
            kind: Hash,
            text: "#",
            byte_offset: 0,
            byte_length: 1,
        },
        Token {
            kind: Bang,
            text: "!",
            byte_offset: 1,
            byte_length: 1,
        },
        Token {
            kind: LeftSquareBracket,
            text: "[",
            byte_offset: 2,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "foo",
            byte_offset: 3,
            byte_length: 3,
        },
        Token {
            kind: RightSquareBracket,
            text: "]",
            byte_offset: 6,
            byte_length: 1,
        },
        Token {
            kind: Semicolon,
            text: "",
            byte_offset: 7,
            byte_length: 0,
        },
        Token {
            kind: Function,
            text: "fn",
            byte_offset: 8,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "main",
            byte_offset: 11,
            byte_length: 4,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 15,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 16,
            byte_length: 1,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 18,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 19,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 20,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
