tests/spec/lex/snapshots/integer.snap
---
source: tests/spec/lex/mod.rs
description: "1"
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "1",
            byte_offset: 0,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 1,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
