tests/spec/lex/snapshots/integer_with_underscore_separators.snap
---
source: tests/spec/lex/mod.rs
description: 1_000_000
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "1_000_000",
            byte_offset: 0,
            byte_length: 9,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 9,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
