tests/spec/lex/snapshots/interface_definition.snap
---
source: tests/spec/lex/mod.rs
description: |
  
  interface Display {
    fn fmt() -> string;
  }
---
LexResult {
    tokens: [
        Token {
            kind: Interface,
            text: "interface",
            byte_offset: 1,
            byte_length: 9,
        },
        Token {
            kind: Identifier,
            text: "Display",
            byte_offset: 11,
            byte_length: 7,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 19,
            byte_length: 1,
        },
        Token {
            kind: Function,
            text: "fn",
            byte_offset: 23,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "fmt",
            byte_offset: 26,
            byte_length: 3,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 29,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 30,
            byte_length: 1,
        },
        Token {
            kind: Arrow,
            text: "->",
            byte_offset: 32,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "string",
            byte_offset: 35,
            byte_length: 6,
        },
        Token {
            kind: Semicolon,
            text: ";",
            byte_offset: 41,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 43,
            byte_length: 1,
        },
        Token {
            kind: Semicolon,
            text: "",
            byte_offset: 44,
            byte_length: 0,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 45,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
