tests/spec/lex/snapshots/interface_keyword.snap
---
source: tests/spec/lex/mod.rs
description: interface
---
LexResult {
    tokens: [
        Token {
            kind: Interface,
            text: "interface",
            byte_offset: 0,
            byte_length: 9,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 9,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
