tests/spec/lex/snapshots/multiline_string_blank_lines_trivia_unaffected.snap
---
source: tests/spec/lex/mod.rs
description: |-
  let a = 1
  
  let s = "x
  y"
  
  let b = 2
---
LexResult {
    tokens: [
        Token {
            kind: Let,
            text: "let",
            byte_offset: 0,
            byte_length: 3,
        },
        Token {
            kind: Identifier,
            text: "a",
            byte_offset: 4,
            byte_length: 1,
        },
        Token {
            kind: Equal,
            text: "=",
            byte_offset: 6,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "1",
            byte_offset: 8,
            byte_length: 1,
        },
        Token {
            kind: Semicolon,
            text: "",
            byte_offset: 9,
            byte_length: 0,
        },
        Token {
            kind: Let,
            text: "let",
            byte_offset: 11,
            byte_length: 3,
        },
        Token {
            kind: Identifier,
            text: "s",
            byte_offset: 15,
            byte_length: 1,
        },
        Token {
            kind: Equal,
            text: "=",
            byte_offset: 17,
            byte_length: 1,
        },
        Token {
            kind: String,
            text: "\"x\ny\"",
            byte_offset: 19,
            byte_length: 5,
        },
        Token {
            kind: Semicolon,
            text: "",
            byte_offset: 24,
            byte_length: 0,
        },
        Token {
            kind: Let,
            text: "let",
            byte_offset: 26,
            byte_length: 3,
        },
        Token {
            kind: Identifier,
            text: "b",
            byte_offset: 30,
            byte_length: 1,
        },
        Token {
            kind: Equal,
            text: "=",
            byte_offset: 32,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "2",
            byte_offset: 34,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 35,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [
        10,
        25,
    ],
}
